# thuvienphapluat-crawler

./: .gitignore  Công_văn_2739_VPCP-ĐMDN_năm_2019_quy_định_về_quản_trị_doanh_nghiệp_tại_Luật_Doanh_nghiệp_chưa_được_thực_thi_do_Văn_phòng_Chính_phủ_ban_hành.txt  Công_văn_3397_BKHĐT-QLKTTW_năm_2019_hướng_dẫn_áp_dụng_quy_định_tại_Điều_162_Luật_Doanh_nghiệp_2014_do_Bộ_Kế_hoạch_và_Đầu_tư_ban_hành.txt  Luật_Doanh_nghiệp_2020.txt  Luật_Doanh_nghiệp_sửa_đổi_2025.txt  Nghị_định_247_2025_NĐ-CP_sửa_đổi_Nghị_định_171_2016_NĐ-CP.txt  Nghị_định_47-2021-NĐ-CP.txt  README.md  README_batch_crawler.md  batch_crawl_luoc_do.py  batch_crawler.py  cookies.txt  crawl_state.json  crawler.py  documents.csv  duplicate_laws_report.txt  ex_dat_dai.txt  ex_hai_quan.txt  ex_url.txt  example_urls.txt  example_urls_output.txt  format.py  format_chunks.py  format_double.py  format_fix.py  format_hopnhat.py  pipeline.py  postprocess.py  pyproject.toml  readme_format.md  requirements.txt  table_converter.py  test.py  test_1.py  upload_documents.py  upload_pdf_to_s3.py
check_hieu_luc/: README.md   bhyt.txt  cookies.txt  crawl_hieu_luc.py  requirements.txt
crawl_fix/: Bộ_luật_Lao_động_2019.txt  Luật_Chứng_khoán_2019.txt  Luật_Quản_lý,_sử_dụng_vũ_khí,_vật_liệu_nổ_và_công_cụ_hỗ_trợ_sửa_đổi_2019.txt  Luật_Quản_lý_thuế_2019.txt  Luật_cán_bộ,_công_chức_2008.txt  Luật_sửa_đổi,_bổ_sung_một_số_Điều_của_37_Luật_có_liên_quan_đến_quy_hoạch_2018.txt  Luật_viên_chức_2010.txt  Quyết_định_435_QĐ-UBND_năm_2020.txt
crawl_test/: Bộ_luật_Lao_động_2019.txt  Hiến_pháp_2013.txt  Luật_Cạnh_tranh_2018.txt  Luật_Đầu_tư_2020.txt  (+32 more)
(+383 files in other folders)
